--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
+    "framer-motion": "^11.0.0",
+    "lodash.debounce": "^4.0.8",
+    "mongoose": "^7.5.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^2.2.0",
-    "framer-motion": "^8.0.0",
-    "@headlessui/react": "^1.9.0",
-    "next-auth": "^5.0.0",
-    "mongoose": "^7.5.0",
-    "stripe": "^12.0.0"
+    "stripe": "^12.0.0",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
-    "tailwindcss": "^4.4.0",
-    "postcss": "^8.4.0",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
-    "prettier": "^2.8.0"
+    "postcss": "^8.4.0",
+    "prettier": "^2.8.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0"
   }
 }
