Update .env.local with additional environment variables
Added placeholders for sensitive environment variables.

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,10 @@
+# MONGODB_URI=mongodb+srv://glory-store:1234@cluster0.wgqtkd5.mongodb.net/?appName=Cluster0
+# NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Copy to .env.local and fill values
 MONGODB_URI=mongodb+srv://glory-store:1234@cluster0.wgqtkd5.mongodb.net/?appName=Cluster0
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=http://localhost:3000
+STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
